packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_functional_component_capture_props.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$, useStore } from '@decoration/qwik';

export const App = component$(({count, rest: [I2, {I3, v1: [I4], I5=v2, ...I6}, I7=v3, ...I8]}) => {
    const state = useStore({count: 0});
    const {rest: [C2, {C3, v1: [C4], C5=v2, ...C6}, C7=v3, ...C8]} = foo();
    return $(() => {
        return (
            <div onClick$={() => state.count += count + total }>
                {I2}{I3}{I4}{I5}{I6}{I7}{I8}
                {C2}{C3}{C4}{C5}{C6}{C7}{C8}
                {v1}{v2}{v3}
            </div>
        )
    });
})

============================= test.js ==

import { componentQrl } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./app_component_ckepmxzlub0"), "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,wGAYjB\"}")
============================= app_component_div_onclick_1cgetmfzx0g.js (ENTRY POINT)==

import { useLexicalScope } from "@decoration/qwik";
export const App_component_div_onClick_1CGetmFZx0g = ()=>{
    const [count, state] = useLexicalScope("App_component_div_onClick_1CGetmFZx0g");
    return state.count += count + total;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";qDAQ2B;;WAAM,MAAM,KAAK,IAAI,QAAQ\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_onClick_1CGetmFZx0g",
  "entry": null,
  "displayName": "App_component_div_onClick",
  "hash": "1CGetmFZx0g",
  "canonicalFilename": "app_component_div_onclick_1cgetmfzx0g",
  "extension": "js",
  "parent": "App_component_1_w0t0o3QMovU",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    345,
    379
  ]
}
*/
============================= app_component_ckepmxzlub0.js (ENTRY POINT)==

import { qrl } from "@decoration/qwik";
import { useStore } from "@decoration/qwik";
export const App_component_ckEPmXZlub0 = ({ count , rest: [I2, { I3 , v1: [I4] , I5 =v2 , ...I6 }, I7 = v3, ...I8]  })=>{
    const state = useStore({
        count: 0
    });
    const { rest: [C2, { C3 , v1: [C4] , C5 =v2 , ...C6 }, C7 = v3, ...C8]  } = foo();
    return /*#__PURE__*/ qrl(()=>import("./app_component_1_w0t0o3qmovu"), "App_component_1_w0t0o3QMovU", [
        C2,
        C3,
        C4,
        C5,
        C6,
        C7,
        C8,
        I2,
        I3,
        I4,
        I5,
        I6,
        I7,
        I8,
        count,
        state
    ]);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;yCAG8B,CAAC,EAAC,MAAK,EAAE,MAAM,CAAC,IAAI,EAAC,GAAE,EAAE,IAAI,CAAC,GAAG,CAAA,EAAE,IAAG,GAAE,EAAE,GAAG,IAAG,EAAE,KAAG,EAAE,EAAE,GAAG,GAAG,CAAA,EAAC,GAAK;IAC/F,MAAM,QAAQ,SAAS;QAAC,OAAO;IAAC;IAChC,MAAM,EAAC,MAAM,CAAC,IAAI,EAAC,GAAE,EAAE,IAAI,CAAC,GAAG,CAAA,EAAE,IAAG,GAAE,EAAE,GAAG,IAAG,EAAE,KAAG,EAAE,EAAE,GAAG,GAAG,CAAA,EAAC,GAAG;IACjE;;;;;;;;;;;;;;;;;;AASJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "app_component_ckepmxzlub0",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    93,
    540
  ]
}
*/
============================= app_component_1_w0t0o3qmovu.js (ENTRY POINT)==

import { useLexicalScope } from "@decoration/qwik";
import { _jsxQ } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
export const App_component_1_w0t0o3QMovU = ()=>{
    const [C2, C3, C4, C5, C6, C7, C8, I2, I3, I4, I5, I6, I7, I8, count, state] = useLexicalScope("App_component_1_w0t0o3QMovU");
    return /*#__PURE__*/ _jsxQ("div", {
        onClick$: /*#__PURE__*/ qrl(()=>import("./app_component_div_onclick_1cgetmfzx0g"), "App_component_div_onClick_1CGetmFZx0g", [
            count,
            state
        ])
    }, null, [
        I2,
        I3,
        I4,
        I5,
        I6,
        I7,
        I8,
        C2,
        C3,
        C4,
        C5,
        C6,
        C7,
        C8,
        v1,
        v2,
        v3
    ], 0, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;2CAMa;;IACL,qBACI,MAAC;QAAI,QAAQ;;;;;QACR;QAAI;QAAI;QAAI;QAAI;QAAI;QAAI;QACxB;QAAI;QAAI;QAAI;QAAI;QAAI;QAAI;QACxB;QAAI;QAAI\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_1_w0t0o3QMovU",
  "entry": null,
  "displayName": "App_component_1",
  "hash": "w0t0o3QMovU",
  "canonicalFilename": "app_component_1_w0t0o3qmovu",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    293,
    536
  ]
}
*/
== DIAGNOSTICS ==

[]
