packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_immutable_analysis.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useStore, $ } from '@decoration/qwik';
import importedValue from 'v';
import styles from './styles.module.css';

export const App = component$((props) => {
    const {Model} = props;
    const state = useStore({count: 0});
    const remove = $((id: number) => {
        const d = state.data;
        d.splice(
          d.findIndex((d) => d.id === id),
          1
        )
      });
    return (
        <>
            <p class="stuff" onClick$={props.onClick$}>Hello Qwik</p>
            <Div
                class={styles.foo}
                document={window.document}
                onClick$={props.onClick$}
                onEvent$={() => console.log('stuff')}
                transparent$={() => {console.log('stuff')}}
                immutable1="stuff"
                immutable2={{
                    foo: 'bar',
                    baz: importedValue ? true : false,
                }}
                immutable3={2}
                immutable4$={(ev) => console.log(state.count)}
                immutable5={[1, 2, importedValue, null, {}]}
            >
                <p>Hello Qwik</p>
            </Div>
            [].map(() => (
                <Model
                    class={state}
                    remove$={remove}
                    mutable1={{
                        foo: 'bar',
                        baz: state.count ? true : false,
                    }}
                    mutable2={(() => console.log(state.count))()}
                    mutable3={[1, 2, state, null, {}]}
                />
            ));
        </>
    );
});

============================= test.js ==

import { componentQrl } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./app_component_ckepmxzlub0"), "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAKA,OAAO,MAAM,oBAAM,wGA4ChB\"}")
============================= app_component__fragment_div_onevent_p0vwsfvwp1k.js (ENTRY POINT)==

export const App_component__Fragment_Div_onEvent_p0vWsfvWP1k = ()=>console.log('stuff');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"+DAsB0B,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component__Fragment_Div_onEvent_p0vWsfvWP1k",
  "entry": null,
  "displayName": "App_component__Fragment_Div_onEvent",
  "hash": "p0vWsfvWP1k",
  "canonicalFilename": "app_component__fragment_div_onevent_p0vwsfvwp1k",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "jSXProp",
  "ctxName": "onEvent$",
  "captures": false,
  "loc": [
    665,
    691
  ]
}
*/
============================= app_component__fragment_div_immutable4_qt1dno4izxo.js (ENTRY POINT)==

import { useLexicalScope } from "@decoration/qwik";
export const App_component__Fragment_Div_immutable4_QT1DNo4IZXo = (ev)=>{
    const [state] = useLexicalScope("App_component__Fragment_Div_immutable4_QT1DNo4IZXo");
    return console.log(state.count);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";kEA8B6B,CAAC;;WAAO,QAAQ,GAAG,CAAC,MAAM,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component__Fragment_Div_immutable4_QT1DNo4IZXo",
  "entry": null,
  "displayName": "App_component__Fragment_Div_immutable4",
  "hash": "QT1DNo4IZXo",
  "canonicalFilename": "app_component__fragment_div_immutable4_qt1dno4izxo",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "jSXProp",
  "ctxName": "immutable4$",
  "captures": true,
  "loc": [
    984,
    1016
  ]
}
*/
============================= app_component_ckepmxzlub0.js (ENTRY POINT)==

import { Fragment as _Fragment } from "@decoration/qwik/jsx-runtime";
import { _IMMUTABLE } from "@decoration/qwik";
import { _fnSignal } from "@decoration/qwik";
import { _jsxC } from "@decoration/qwik";
import { _jsxQ } from "@decoration/qwik";
import importedValue from "v";
import { qrl } from "@decoration/qwik";
import styles from "./styles.module.css";
import { useStore } from "@decoration/qwik";
export const App_component_ckEPmXZlub0 = (props)=>{
    const state = useStore({
        count: 0
    });
    const remove = /*#__PURE__*/ qrl(()=>import("./app_component_remove_pu6yoc5p6sy"), "App_component_remove_pU6yOC5P6sY", [
        state
    ]);
    return /*#__PURE__*/ _jsxC(_Fragment, {
        children: [
            /*#__PURE__*/ _jsxQ("p", {
                onClick$: props.onClick$
            }, {
                class: "stuff"
            }, "Hello Qwik", 2, null),
            /*#__PURE__*/ _jsxC(Div, {
                get class () {
                    return styles.foo;
                },
                get document () {
                    return window.document;
                },
                immutable1: "stuff",
                onClick$: props.onClick$,
                onEvent$: /*#__PURE__*/ qrl(()=>import("./app_component__fragment_div_onevent_p0vwsfvwp1k"), "App_component__Fragment_Div_onEvent_p0vWsfvWP1k"),
                transparent$: /*#__PURE__*/ qrl(()=>import("./app_component__fragment_div_transparent_jtd8sctndsg"), "App_component__Fragment_Div_transparent_jTD8SCTNDsg"),
                get immutable2 () {
                    return {
                        foo: 'bar',
                        baz: importedValue ? true : false
                    };
                },
                children: /*#__PURE__*/ _jsxQ("p", null, null, "Hello Qwik", 3, null),
                immutable3: 2,
                immutable4$: /*#__PURE__*/ qrl(()=>import("./app_component__fragment_div_immutable4_qt1dno4izxo"), "App_component__Fragment_Div_immutable4_QT1DNo4IZXo", [
                    state
                ]),
                immutable5: [
                    1,
                    2,
                    importedValue,
                    null,
                    {}
                ],
                [_IMMUTABLE]: {
                    class: _IMMUTABLE,
                    document: _IMMUTABLE,
                    immutable1: _IMMUTABLE,
                    immutable2: _IMMUTABLE,
                    immutable3: _IMMUTABLE,
                    immutable4$: _IMMUTABLE,
                    immutable5: _IMMUTABLE,
                    onEvent$: _IMMUTABLE,
                    transparent$: _IMMUTABLE
                }
            }, 2, "u6_0"),
            "[].map(() => (",
            /*#__PURE__*/ _jsxC(props.Model, {
                class: state,
                remove$: remove,
                get mutable1 () {
                    return {
                        foo: 'bar',
                        baz: state.count ? true : false
                    };
                },
                mutable2: (()=>console.log(state.count))(),
                mutable3: [
                    1,
                    2,
                    state,
                    null,
                    {}
                ],
                [_IMMUTABLE]: {
                    class: _IMMUTABLE,
                    mutable1: _fnSignal((p0)=>({
                            foo: 'bar',
                            baz: p0.count ? true : false
                        }), [
                        state
                    ], '{foo:"bar",baz:p0.count?true:false}'),
                    mutable3: _IMMUTABLE,
                    remove$: _IMMUTABLE
                }
            }, 3, "u6_1"),
            "));"
        ]
    }, 1, "u6_2");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;yCAK8B,CAAC,QAAU;IAErC,MAAM,QAAQ,SAAS;QAAC,OAAO;IAAC;IAChC,MAAM;;;IAON,qBACI;;0BACI,MAAC;gBAAgB,UAAU,MAAM,QAAQ;;gBAAtC,OAAM;eAAkC;0BAC3C,MAAC;oBACG;2BAAO,OAAO,GAAG;;oBACjB;2BAAU,OAAO,QAAQ;;gBAIzB,YAAW;gBAHX,UAAU,MAAM,QAAQ;gBACxB,QAAQ;gBACR,YAAY;oBAEZ;2BAAY;wBACR,KAAK;wBACL,KAAK,gBAAgB,IAAI,GAAG,KAAK;oBACrC;;0BAKA,cAAA,MAAC,iBAAE;gBAJH,YAAY;gBACZ,WAAW;;;gBACX,YAAY;oBAAC;oBAAG;oBAAG;oBAAe,IAAI;oBAAE,CAAC;iBAAE;;oBAZ3C,KAAK;oBACL,QAAQ;oBAIR,UAAU;oBACV,UAAU;oBAIV,UAAU;oBACV,WAAW;oBACX,UAAU;oBATV,QAAQ;oBACR,YAAY;;;YAWV;0BAEF,MA9BI,MAAT;gBA+BS,OAAO;gBACP,SAAS;oBACT;2BAAU;wBACN,KAAK;wBACL,KAAK,MAAM,KAAK,GAAG,IAAI,GAAG,KAAK;oBACnC;;gBACA,UAAU,AAAC,CAAA,IAAM,QAAQ,GAAG,CAAC,MAAM,KAAK,CAAA;gBACxC,UAAU;oBAAC;oBAAG;oBAAG;oBAAO,IAAI;oBAAE,CAAC;iBAAE;;oBAPjC,KAAK;oBAEL,QAAQ,kBAAE,CAAA;4BACN,KAAK;4BACL,KAAK,GAAM,KAAK,GAAG,IAAI,GAAG,KAAK;wBACnC,CAAA;;;oBAEA,QAAQ;oBANR,OAAO;;;YAOT;;;AAIlB\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "app_component_ckepmxzlub0",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    166,
    1591
  ]
}
*/
============================= app_component_remove_pu6yoc5p6sy.js (ENTRY POINT)==

import { useLexicalScope } from "@decoration/qwik";
export const App_component_remove_pU6yOC5P6sY = (id)=>{
    const [state] = useLexicalScope("App_component_remove_pU6yOC5P6sY");
    const d = state.data;
    d.splice(d.findIndex((d)=>d.id === id), 1);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";gDAQqB,CAAC;;IACd,MAAM,IAAI,MAAM,IAAI;IACpB,EAAE,MAAM,CACN,EAAE,SAAS,CAAC,CAAC,IAAM,EAAE,EAAE,KAAK,KAC5B\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_remove_pU6yOC5P6sY",
  "entry": null,
  "displayName": "App_component_remove",
  "hash": "pU6yOC5P6sY",
  "canonicalFilename": "app_component_remove_pu6yoc5p6sy",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    267,
    405
  ]
}
*/
============================= app_component__fragment_div_transparent_jtd8sctndsg.js (ENTRY POINT)==

export const App_component__Fragment_Div_transparent_jTD8SCTNDsg = ()=>{
    console.log('stuff');
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"mEAuB8B,IAAM;IAAC,QAAQ,GAAG,CAAC;AAAQ\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component__Fragment_Div_transparent_jTD8SCTNDsg",
  "entry": null,
  "displayName": "App_component__Fragment_Div_transparent",
  "hash": "jTD8SCTNDsg",
  "canonicalFilename": "app_component__fragment_div_transparent_jtd8sctndsg",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "jSXProp",
  "ctxName": "transparent$",
  "captures": false,
  "loc": [
    723,
    751
  ]
}
*/
== DIAGNOSTICS ==

[]
