packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_immutable_function_components.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useStore, Slot } from '@decoration/qwik';

export const App = component$((props: Stuff) => {
    return (
        <div>
            <Slot/>
        </div>
    );
});

============================= test.js ==

import { componentQrl } from "@decoration/qwik";
import { _jsxC } from "@decoration/qwik";
import { _jsxQ } from "@decoration/qwik";
import { inlinedQrl } from "@decoration/qwik";
import { Slot } from '@decoration/qwik';
const App_component_ckEPmXZlub0 = (props)=>{
    return /*#__PURE__*/ _jsxQ("div", null, null, /*#__PURE__*/ _jsxC(Slot, null, 3, "u6_0"), 1, "u6_1");
};
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(App_component_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;AACA,SAA+B,IAAI,QAAQ,mBAAmB;kCAEhC,CAAC,QAAiB;IAC5C,qBACI,MAAC,iCACG,MAAC;AAGb;AANA,OAAO,MAAM,oBAAM,+FAMhB\"}")
== DIAGNOSTICS ==

[]
