packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_import_assertion.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, $ } from '@decoration/qwik';
import json from "./foo.json" assert { type: "json" };

export const Greeter = component$(() => {
    return json;
});

============================= test.js ==

import { componentQrl } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
export const Greeter = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./greeter_component_n7hug2hhu0q"), "Greeter_component_n7HuG2hhU0Q"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAIA,OAAO,MAAM,wBAAU,gHAEpB\"}")
============================= greeter_component_n7hug2hhu0q.js (ENTRY POINT)==

import json from "./foo.json" assert {
    type: "json"
};
export const Greeter_component_n7HuG2hhU0Q = ()=>{
    return json;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"qCAEqC;IAAE,MAAM;AAAO;6CAElB,IAAM;IACpC,OAAO;AACX\"}")
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_n7HuG2hhU0Q",
  "entry": null,
  "displayName": "Greeter_component",
  "hash": "n7HuG2hhU0Q",
  "canonicalFilename": "greeter_component_n7hug2hhu0q",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    142,
    168
  ]
}
*/
== DIAGNOSTICS ==

[]
