packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_inlined_entry_strategy.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useBrowserVisibleTask$, useStore, useStyles$ } from '@decoration/qwik';
import { thing } from './sibling';
import mongodb from 'mongodb';

export const Child = component$(() => {

    useStyles$('somestring');
    const state = useStore({
        count: 0
    });

    // Double count watch
    useBrowserVisibleTask$(() => {
        state.count = thing.doStuff() + import("./sibling");
    });

    return (
        <div onClick$={() => console.log(mongodb)}>
        </div>
    );
});


============================= test.tsx ==

import { componentQrl } from "@decoration/qwik";
import { useStylesQrl } from "@decoration/qwik";
import { inlinedQrl } from "@decoration/qwik";
import { useBrowserVisibleTaskQrl } from "@decoration/qwik";
import { useLexicalScope } from "@decoration/qwik";
import { useStore } from '@decoration/qwik';
import { thing } from './sibling';
import mongodb from 'mongodb';
export const Child = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(()=>{
    useStylesQrl(/*#__PURE__*/ inlinedQrl('somestring', "Child_component_useStyles_qBZTuFM0160"));
    const state = useStore({
        count: 0
    });
    // Double count watch
    useBrowserVisibleTaskQrl(/*#__PURE__*/ inlinedQrl(()=>{
        const [state] = useLexicalScope("Child_component_useBrowserVisibleTask_0IGFPOyJmQA");
        state.count = thing.doStuff() + import("./sibling");
    }, "Child_component_useBrowserVisibleTask_0IGFPOyJmQA", [
        state
    ]));
    return <div onClick$={/*#__PURE__*/ inlinedQrl(()=>console.log(mongodb), "Child_component_div_onClick_elliVSnAiOQ")}>

        </div>;
}, "Child_component_9GyF01GDKqw"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AACA,SAA6C,QAAQ,QAAoB,mBAAmB;AAC5F,SAAS,KAAK,QAAQ,YAAY;AAClC,OAAO,aAAa,UAAU;AAE9B,OAAO,MAAM,sBAAQ,sCAAW,IAAM;IAElC,sCAAW;IACX,MAAM,QAAQ,SAAS;QACnB,OAAO;IACX;IAEA,qBAAqB;IACrB,kDAAuB;;QACnB,MAAM,KAAK,GAAG,MAAM,OAAO,KAAK,MAAM,CAAC;;;;IAG3C,QACK,IAAI,mCAAU,IAAM,QAAQ,GAAG,CAAC,sDAAU;;QAC3C,EAAE;AAEV,mCAAG\"}")
== DIAGNOSTICS ==

[]
