packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_input_bind.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, $ } from '@decoration/qwik';

export const Greeter = component$(() => {
    const value = useSignal(0);
    const checked = useSignal(false);
    const stuff = useSignal();
    return (
        <>
            <input bind:value={value} />
            <input bind:checked={checked} />
            <input bind:stuff={stuff} />
            <div>{value}</div>
            <div>{value.value}</div>
        </>

    )
});

============================= test.js ==

import { componentQrl } from "@decoration/qwik";
import { useLexicalScope } from "@decoration/qwik";
import { inlinedQrl } from "@decoration/qwik";
import { _jsxQ } from "@decoration/qwik";
import { _fnSignal } from "@decoration/qwik";
import { _jsxC } from "@decoration/qwik";
import { Fragment as _Fragment } from "@decoration/qwik/jsx-runtime";
export const Greeter = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(()=>{
    const value = useSignal(0);
    const checked = useSignal(false);
    const stuff = useSignal();
    return /*#__PURE__*/ _jsxC(_Fragment, {
        children: [
            /*#__PURE__*/ _jsxQ("input", null, {
                "onInput$": /*#__PURE__*/ inlinedQrl((_, elm)=>{
                    const [value] = useLexicalScope("s_SO0WIOE0Sqc");
                    return value.value = elm.value;
                }, "s_SO0WIOE0Sqc", [
                    value
                ]),
                "value": value
            }, null, 3, null),
            /*#__PURE__*/ _jsxQ("input", null, {
                "checked": checked,
                "onInput$": /*#__PURE__*/ inlinedQrl((_, elm)=>{
                    const [checked] = useLexicalScope("s_VKebOylP0Dk");
                    return checked.value = elm.checked;
                }, "s_VKebOylP0Dk", [
                    checked
                ])
            }, null, 3, null),
            /*#__PURE__*/ _jsxQ("input", null, {
                "onChange$": /*#__PURE__*/ inlinedQrl((_, elm)=>{
                    const [stuff] = useLexicalScope("s_HplsUb3Bodg");
                    return stuff.value = elm.stuff;
                }, "s_HplsUb3Bodg", [
                    stuff
                ]),
                "stuff": stuff
            }, null, 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, value, 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, _fnSignal((p0)=>p0.value, [
                value
            ], "p0.value"), 3, null)
        ]
    }, 3, "u6_0");
}, "s_n7HuG2hhU0Q"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;AAGA,OAAO,MAAM,wBAAU,sCAAW,IAAM;IACpC,MAAM,QAAQ,UAAU;IACxB,MAAM,UAAU,UAAU,KAAK;IAC/B,MAAM,QAAQ;IACd,qBACI;;0BACI,MAAC;;;2BAAkB;;;;yBAAA;;0BACnB,MAAC;2BAAoB;;;2BAAA;;;;;0BACrB,MAAC;;;2BAAkB;;;;yBAAA;;0BACnB,MAAC,mBAAK;0BACN,MAAC,mCAAK,GAAM,KAAK;;;;;AAI7B,qBAAG\"}")
== DIAGNOSTICS ==

[]
